--- a/.github/workflows/api-gateway-deploy.yml
+++ b/.github/workflows/api-gateway-deploy.yml
@@ -105,3 +105,22 @@ jobs:
         max-attempts: 10
         retry-delay: 10s
         retry-all: true
+
+  switch:
+    needs:
+    - deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Swap the slot
+      uses: azure/spring-cloud-deploy@v1
+      with:
+        azure-subscription: ${{ env.AZURE_SUBSCRIPTION }}
+        action: set-production
+        service-name: ${{ env.SPRING_APPS_SERVICE }}
+        app-name:  ${{ env.API_GATEWAY }}
+        use-staging-deployment: true
